# idsl

./: .gitignore  LICENSE  README.md  dune-project  iDSL.opam
docs/: language-service.md  three_valued_logic.md
editors/nvim/: README.md
editors/nvim/ftdetect/: idsl.vim
editors/nvim/ftplugin/: idsl.vim
editors/nvim/lua/idsl/: init.lua
editors/nvim/syntax/: idsl.vim
examples/: contract_review.idsl  domains.idsl  order.idsl
examples/shipping/: carriers.idsl  items.idsl  main.idsl
lib/: dune  lexer.mll  parser.mly
lib/ir/: ast.ml  diagnostic.ml  printer.ml  typed.ml  types.ml
lib/lsp/: lsp_query.ml  semantic_index.ml  symbol.ml  utf16.ml  workspace.ml
lib/runtime/: coverage.ml  dump.ml  eval.ml  eval.mli  explain.ml  json.ml  load.ml  whatif.ml
lib/sem/: driver.ml  resolve.ml  session.ml  typecheck.ml
lib/syntax/: cst.ml  lower.ml
test/: dune  recov_test.ml  test_domain_identity.ml  test_iDSL.ml  test_properties.ml  test_workspace.ml
vscode/: README.md  language-configuration.json  package.json
vscode/client/: extension.js
vscode/syntaxes/: idsl.tmLanguage.json
web/: dune  idsl_js.ml  index.html
