(test
 (name test_iDSL)
 (libraries iDSL str)
 (deps (glob_files ../examples/*.idsl)))

(test
 (name test_workspace)
 (libraries iDSL unix str)
 (deps ../bin/idsl_lsp.exe))

(test
 (name test_domain_identity)
 (libraries iDSL threads.posix))

(test
 (name test_properties)
 (libraries iDSL qcheck-core))

(executable
 (name recov_test)
 (libraries iDSL))
